--- a/_code/_promo/_assets/stylesheets/main.css
+++ b/_code/_promo/_assets/stylesheets/main.css
@@ -485,7 +485,7 @@ header {
   position: relative;
   height: 800px;
   padding: 30px 0;
-  background: white url("/_assets/images/individual-home-bg.jpg") no-repeat center 0 fixed;
+  background: white url("/_assets/images/individual-home-bg.jpg") no-repeat center 0 scroll;
   border-bottom: 2px solid #616975;
   overflow: hidden;
   text-align: center;
@@ -1079,6 +1079,7 @@ small {
   position: relative;
   width: 100%;
   background: transparent;
+  overflow-y: hidden;
 }
 .m-wrapper:before, .m-wrapper--white:before, .m-wrapper:after, .m-wrapper--white:after {
   content: " ";
