changing the light blue button to dark blue

--- a/_code/_promo/_assets/stylesheets/button.scss
+++ b/_code/_promo/_assets/stylesheets/button.scss
@@ -28,10 +28,10 @@
   font-weight: $font-light;
 }
 
-.m-button--light-blue {
+.m-button--dark-blue {
   @extend .m-button;
-  border-color: $lighter-blue;
-  color: $lighter-blue;
+  border-color: darken($blue,16%);
+  color: darken($blue,16%);
 }
 
 .m-button--primary {
