--- a/_code/_promo/_assets/stylesheets/header.scss
+++ b/_code/_promo/_assets/stylesheets/header.scss
@@ -1,6 +1,6 @@
 header {
   position: relative;
-  height: $column * 8;
+  height: ($column * 7) + ($gutter * 3);
   padding: $baseline * 5 0;
   background: white url('/_assets/images/individual-home-bg.jpg') no-repeat center 0 scroll;
   border-bottom: 2px solid $darkest-gray;
@@ -12,8 +12,11 @@ header {
 }
 
 a[role=top-nav] {
-  @include position(absolute, 0px $gutter 0 0);
+  @include position(absolute, -$gutter ($gutter / 2) 0 0);
   @include font-size(1.6);
+  @media screen and (min-width: $bp-smaller) {
+    @include position(absolute, 0px $gutter 0 0);
+  }
   @media screen and (min-width: $bp) {
     @include position(absolute, 0px 0px 0 0);
   }
@@ -26,13 +29,18 @@ a[role=top-nav] {
 
 .m-logo {
   display: block;
-  width: 186px;
-  height: 87px;
+  width: 167px;
+  height: 79px;
   margin: 0 0 ($baseline * 4 - 4);
   background: transparent url('/_assets/images/logo@2x.png') no-repeat 0 0;
-  background-size: 186px 87px;
+  background-size: 167px 79px;
   h1 {
     text-indent: -9999px;
+  }
+  @media screen and (min-width: $bp-smaller) {
+    width: 186px;
+    height: 87px;
+    background-size: 186px 87px;
   }
   @media screen and (min-width: $bp) {
     margin: 0 0 ($baseline * 4 - 4) -64px;
@@ -43,13 +51,23 @@ a[role=top-nav] {
   width: 100%;
   color: white;
   text-align: left;
+  padding: $gutter/2;
+  background: transparentize($darkest-gray, 0.18);
+  border-radius: $baseline;
+  @media screen and (min-width: $bp-smaller) {
+    padding: 0;
+    background: transparent;
+    border-radius: none;
+  }
   > h1 {
     @include font-size(3.2);
     margin-bottom: $baseline * 4;
     line-height: 1.3125;
-    text-shadow: 2px 2px 2px transparentize($blue, 0.6);
-    > .franc-text {
-      text-shadow: 2px 2px 2px transparentize(white, 0.6);
+    @media screen and (min-width: $bp-smaller) {
+      text-shadow: -2px -2px 4px transparentize($blue, 0.5), 2px 2px 2px transparentize($blue, 0.5), 0px 0px 32px $blue;
+      > .franc-text {
+        text-shadow: 2px 2px 2px transparentize(white, 0.6);
+      }
     }
   }
 
@@ -57,7 +75,9 @@ a[role=top-nav] {
     @include font-size(2);
     margin-bottom: $baseline * 4 - 5;
     line-height: 1.25; // 25px
-    text-shadow: 0px 1px 1px $blue;
+    @media screen and (min-width: $bp-smaller) {
+      text-shadow: -1px -1px 2px transparentize($blue, 0.5), 0px 1px 1px transparentize($blue, 0.5), 0px 0px 12px $blue;
+    }
   }
   @media screen and (min-width: $bp) {
     width: ($column * 5) + ($gutter * 6);
@@ -77,7 +97,15 @@ a[role=top-nav] {
     @media screen and (min-width: $bp-larger) {
     width: ($column * 9);
   }
-    > h1 { text-shadow: -2px -2px 4px transparentize(black, 0.5), 2px 2px 2px transparentize(black, 0.5), 0px 0px 32px black;}
-    > p { text-shadow: -1px -1px 2px transparentize(black, 0.5), 0px 1px 1px transparentize(black, 0.5), 0px 0px 12px black;}
+    > h1 { 
+      @media screen and (min-width: $bp-smaller) {
+        text-shadow: -2px -2px 4px transparentize(black, 0.5), 2px 2px 2px transparentize(black, 0.5), 0px 0px 32px black;
+      }
+    }
+    > p {
+      @media screen and (min-width: $bp-smaller) {
+        text-shadow: -1px -1px 2px transparentize(black, 0.5), 0px 1px 1px transparentize(black, 0.5), 0px 0px 12px black;
+      }
+    }
   }
 }
