changing some images to optimize things

--- a/_code/_promo/_assets/stylesheets/imgs.scss
+++ b/_code/_promo/_assets/stylesheets/imgs.scss
@@ -30,7 +30,7 @@
 
 #story-bg {
   height: 281px;
-  background-image: url('../images/story-image@2x.png');
+  background-image: url('../images/story-image@2x.jpg');
   background-size: 1200px 281px;
   @media screen and (min-width: 1200px) {
     height: 371px;
@@ -65,7 +65,7 @@
 #met-up-group {
   height: 374px;
   margin-top: -374px;
-  background-image: url('../images/together-at-last@2x.png');
+  background-image: url('../images/together-at-last.png');
   background-position: right;
   background-size: 614px 374px;
 }
