changing up the font color and adding a normal class

--- a/_code/_promo/_assets/stylesheets/main.scss
+++ b/_code/_promo/_assets/stylesheets/main.scss
@@ -14,8 +14,10 @@
 }
 
 .franc-text {
-  color: $pink;
   font-weight: $font-normal;
+  @media screen and (min-width: $bp-smaller) {
+    color: $pink;
+  }
 }
 
 .m-wrapper {
@@ -130,6 +132,10 @@
 .is-hidden {
   opacity: 0;
   display: none;
+}
+
+.t-normal {
+  font-weight: $font-normal;
 }
 
 .ie-overlay {
